# mslv_ml1-2024

./: .gitignore  README.md  pyproject.toml
Código/: Preprocesamiento_y_Entrenamiento_Completo.ipynb
